<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_garage"
            android:icon="@drawable/ic_menu_car"
            android:title="@string/menu_garage" />
        <item
            android:id="@+id/nav_performance"
            android:icon="@drawable/ic_menu_speedometer"
            android:title="@string/menu_performance" />
        <item
            android:id="@+id/nav_routes"
            android:icon="@drawable/ic_menu_routes"
            android:title="@string/menu_routes" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
